former-apps/jellyfin/jellyfin-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ext
  labels:
    type: external
spec:
  tls:
    - hosts:
        - jellyfin.{hostname}
      secretName: jellyfin.ing.cert
  rules:
    - host: jellyfin.{hostname}
      http:
        paths:
          - backend:
              service:
                name: jellyfin
                port:
                  number: 8096
            path: /
            pathType: Prefix
