former-apps/jellyfin/jellyfin-local-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-local

  labels:
    type: local
spec:
  rules:
    - host: jellyfin.local
      http:
        paths:
          - backend:
              service:
                name: jellyfin
                port:
                  number: 8096
            path: /
            pathType: Prefix
